--- a/docfx_project/home/toc.yml
+++ b/docfx_project/home/toc.yml
@@ -7,3 +7,4 @@
     items:
     - name: Use Gitlab Repository
       href: ./docstore/techguides/use-gitlab-repository.md
+      href: ./docstore/techguides/configure-and-use-t24-in-cloud.md
