--- a/docfx_project/home/toc.yml
+++ b/docfx_project/home/toc.yml
@@ -9,3 +9,5 @@
       href: ./docstore/techguides/use-gitlab-repository.md
     - name: Configure and Use T24 in Cloud
       href: ./docstore/techguides/configure-and-use-t24-in-cloud.md
+    - name: Troubleshooting
+      href: ./docstore/techguides/troubleshooting.md
