--- a/manifest.json
+++ b/manifest.json
@@ -1518,6 +1518,21 @@
       "version": ""
     },
     {
+      "log_codes": [
+        "InvalidFileLink"
+      ],
+      "type": "Conceptual",
+      "source_relative_path": "home/overview.md",
+      "output": {
+        ".html": {
+          "relative_path": "home/overview.html",
+          "hash": "2FrmA+JWYFpl+xLSrEkKwA=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
       "type": "Toc",
       "source_relative_path": "home/toc.yml",
       "output": {
