--- a/docfx_project/home/toc.yml
+++ b/docfx_project/home/toc.yml
@@ -1,7 +1,13 @@
 - name: Overview
   href: ./overview.md
+  items:
+    - name: Benefits
+      href: ./benefits.md
 - name: Architecture
   href: ./architecture.md
+  items:
+    - name: Temenos Cloud Templates
+      href: ./temenos-cloud-templates.md
 - name: Technical Guides
   href: ./techguides/index.md
   items:
